--- a/howit_works.html
+++ b/howit_works.html
@@ -155,7 +155,7 @@
           <div class="modal-body">
             <form>
               <div class="form-group">
-                <label for="name">Name</label>
+                <label for="name">danayit</label>
                 <input type="text" class="form-control">
               </div>
               <div class="form-group">
