--- a/Blog.html
+++ b/Blog.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ui class="navbar-nav ml-auto text-white">
                     <li class="nav-item">
-                        <a href="why_zhiyu.html" class="nav-link">Why Zhi yu</a>
+                        <a href="why_zhiyu.html" class="nav-link">Why Zhi Yu</a>
                     </li>
                     <li class="nav-item">
                         <a href="howit_works.html" class="nav-link">How it works</a>
