--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ui class="navbar-nav ml-auto text-white">
                     <li class="nav-item">
-                        <a href="why_zhiyu.html" class="nav-link">Why Zhi yu</a>
+                        <a href="why_zhiyu.html" class="nav-link">Why Zhi Yu</a>
                     </li>
                     <li class="nav-item">
                         <a href="howit_works.html" class="nav-link">How it works</a>
@@ -99,7 +99,7 @@
     </section>
     <div class="text-dark text-center" id="MAM">
         <h2 class="p-5">I AM READY TO TRY ZHI YU</h2>
-          <button class=" btn btn-warning p-4" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
+          <button class=" btn btn-success p-4" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
           <div class="call info p-5">YOU CAN ALSO CALL:12345678 </div>
         </div>
     
