--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ui class="navbar-nav ml-auto text-white">
                     <li class="nav-item">
-                        <a href="why_zhiyu.html" class="nav-link">why Zhi Yu</a>
+                        <a href="why_zhiyu.html" class="nav-link">Why Zhi Yu</a>
                     </li>
                     <li class="nav-item">
                         <a href="Howit_works.html" class="nav-link">How it works</a>
