--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row">
           <div class="col-lg-6 d-none d-lg-block">
             <h1 class="display-4">A GUIDE
-              <strong>TO A HEALTHY LIFE SYTLE</strong>
+              <strong>TO A HEALTHY LIFE STYLE</strong>
             </h1>
             <div class="d-flex">
               <div class="p-4 align-self-start">
