--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   </section>
 
   <!--HOW IT WORKS HEAD -->
-  <section id="about" class="bg-green">
+  <section id="about" class="bg-purple-gradient">
     <div class="container">
       <div class="row">
         <div class="col text-center py-5">
@@ -174,7 +174,7 @@
   </section>
 
   <!--HOW IT WORKS SECTION -->
-  <section id="about" class="py-5 bg-green">
+  <section id="about" class="py-5 bg-purple-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-6 order-1">
@@ -293,7 +293,7 @@
   </section>
 
   <!-- FOOTER -->
-  <footer id="main-footer" class="bg-green">
+  <footer id="main-footer" class="bg-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
