--- a/blog-detail.html
+++ b/blog-detail.html
@@ -79,11 +79,11 @@
       <div class="col-md-4 pl-5">
         <h2>Recent Posts</h2>
         <ul class="list-group">
-          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-success text-white">What is Intermittent fasting?</a>
+          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-warning text-white">What is Intermittent fasting?</a>
           <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-success text-white"> Mediterranean Diet</a>
-          <a href="brain-health.html" class="nav-link list-group-item bg-success text-white">Foods that are Great for your Brain Health</a>
+          <a href="brain-health.html" class="nav-link list-group-item bg-primary text-white">Foods that are Great for your Brain Health</a>
           <a href="inflammation.html" class="nav-link list-group-item bg-success text-white">Foods That Help Inflammation in the Body</a>
-          <a href="season-spring.html" class="nav-link list-group-item bg-success text-white">Produce in-Season Spring 2021!</a>
+          <a href="season-spring.html" class="nav-link list-group-item bg-danger text-white">Produce in-Season Spring 2021!</a>
         </ul>
 
       </div>
@@ -148,16 +148,13 @@
 
 
 
-  <script src="http://code.jquery.com/jquery-3.3.1min.js"integrity="sha256-Fgpcb/KJQ1LNfOu91ta32o/NMZx1twRo8QtmKMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umdpopper.min,js"integrity="sha384-ZMP7rVo3mIyKV+2+9J3UJ46jBK0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootsrapdn.com/bootstrap/4.1.1/js/bootstrap.min.js"integrity="sha384-smHYKdLADwkXOn1EmNlEmNqK/HfnucbVRZyYmZ4qpea6sjB/pTJ0euyQp0MK8ck+5T"crossorigin="anonymous"></script>
-</body>
-<script>
-  // Get the current year for the copyright
-  $('#year').text(new Date().getfullyear());
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script>
+    // Get the current year for the copyright
+    $('#year').text(new Date().getfullyear());
 
-  // init Scrollspy
-  $('body').scrollspy({ target: 'main-nav'});
+    // init Scrollspy
+    $('body').scrollspy({ target: 'main-nav'});
 </script>
-
-</html>
