--- a/service_area.html
+++ b/service_area.html
@@ -174,22 +174,13 @@
 
 
 
-  <script src="http://code.jquery.com/jquery-3.3.1min.js"
-    integrity="sha256-Fgpcb/KJQ1LNfOu91ta32o/NMZx1twRo8QtmKMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umdpopper.min,js"
-    integrity="sha384-ZMP7rVo3mIyKV+2+9J3UJ46jBK0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootsrapdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-    integrity="sha384-smHYKdLADwkXOn1EmNlEmNqK/HfnucbVRZyYmZ4qpea6sjB/pTJ0euyQp0MK8ck+5T"
-    crossorigin="anonymous"></script>
-</body>
-<script>
-  // Get the current year for the copyright
-  $('#year').text(new Date().getfullyear());
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script>
+    // Get the current year for the copyright
+    $('#year').text(new Date().getfullyear());
 
-  // init Scrollspy
-  $('body').scrollspy({ target: 'main-nav' });
+    // init Scrollspy
+    $('body').scrollspy({ target: 'main-nav'});
 </script>
-</body>
-
-</html>
