home page update

--- a/howit_works.html
+++ b/howit_works.html
@@ -101,21 +101,18 @@
     </div>
 </section>
 <div class="row text-dark py-5 px-5" id="danu">
-  <div class="col-md-4 bg-white text-dark align-center p-5 shadow p-3 mb-5 bg-body rounded">
-    <img src="assets/img/house.png" class="w-50 pb-5" alt="Gary Lacinski
-    Publisher, HX Media">
+  <div class="col-md-4 bg-purple-gradient text-dark align-center p-5 shadow p-3 mb-5 bg-body rounded">
+    <img src="assets/img/house.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <p></p>
   </div>
-  <div class="col-md-4 bg-white p-5 shadow p-3 mb-5 bg-body rounded">
-    <img src="assets/img/stethoscope.png" class="w-50 pb-5" alt="Gary Lacinski
-    Publisher, HX Media">
+  <div class="col-md-4 bg-purple-gradient p-5 shadow p-3 mb-5 bg-body rounded">
+    <img src="assets/img/stethoscope.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <p></p>
   </div>
-  <div class="col-md-4 bg-white p-5 shadow p-3 mb-5 bg-body rounded">
-    <img src="assets/img/plan.png" class="w-50 pb-5" alt="Gary Lacinski
-    Publisher, HX Media">
+  <div class="col-md-4 bg-purple-gradient p-5 shadow p-3 mb-5 bg-body rounded">
+    <img src="assets/img/plan.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <p></p>
   </div>
