--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="green-overlay">
       <div class="home-inner container">
         <div class="row">
-          <div class="col-lg-6 d-none d-lg-block">
+          <div class="col-md-6 ">
             <h1 class="display-4">A GUIDE
               <strong>TO A HEALTHY LIFE STYLE</strong>
             </h1>
@@ -85,51 +85,29 @@
                 Our always fresh delivery is included in the cost of your meals.
               </div>
             </div>
-          </div>
-
-          <div class="col-lg-4 pl-5">
-            <div class="card bg-green text-center card-form">
-              <div class="card-body">
-                <h3 class="mt-5">Sign Up Today</h3>
-                <p>Please fill out this form to register</p>
-                <form>
-                  <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" placeholder="Enter Username">
-                  </div>
-                  <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" placeholder="Email">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" placeholder="Password">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" placeholder="Confirm Password">
-                  </div>
-                  <input type="submit" value="Submit" class="btn btn-outline-dark1 btn-block">
-                </form>
-              </div>
-            </div>
-          </div>
         </div>
+        <div class="col-md-6">
+          <img src="https://images.unsplash.com/photo-1490645935967-10de6ba17061?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
+
       </div>
     </div>
   </header>
 
   <!--Why Zhi yu HEAD -->
-  <section id="explore-head-section">
+  <section id="share-head-section" class="">
     <div class="container">
       <div class="row">
-        <div class="col text-center text-dark py-5">
+        <div class="col text-center py-5 primary-color" >
           <h1 class="display4">Why Zhi yu</h1>
           <p class="lead">Whether you are a busy mom, or an executive who works late, everyone has their own personal fitness goals and dietary nee</p>
-          <a href="why_zhiyu.html" class="btn btn-outline-secondary">Find out more</a>
+          <a href="why_zhiyu.html" class="btn bg-primary-color text-light">Find out more</a>
         </div>
       </div>
     </div>
   </section>
 
   <!--Why Zhi yu SECTION -->
-  <section id="explore-section" class="bg-light text-dark py-5">
+  <section id="explore-section" class="bg-gradient text-light py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -153,33 +131,33 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <img src="https://images.unsplash.com/photo-1505576399279-565b52d4ac71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGhlYWx0aCUyMGFuZCUyMG51dHJpdGlvbiUyMHBpY3N8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
+        <div class="col-md-6">
+          <img src="https://images.unsplash.com/photo-1467453678174-768ec283a940?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
 
         </div>
       </div>
   </section>
 
   <!--HOW IT WORKS HEAD -->
-  <section id="about" class="bg-purple-gradient">
+  <section id="about" class="text-dark">
     <div class="container">
       <div class="row">
-        <div class="col text-center py-5">
+        <div class="col text-center text-dark py-5 ">
           <h1 class="display4">How It Works</h1>
           <p class="lead">Share with us your dietary goals, requirements, preferences and anything else we need to know to cater to your needs so that you can meet your goals.</p>
-          <a href="#" class="btn btn-outline-light">Find out more</a>
+          <a href="#" class="btn btn-outline-dark">Find out more</a>
         </div>
       </div>
     </div>
   </section>
 
   <!--HOW IT WORKS SECTION -->
-  <section id="about" class="py-5 bg-purple-gradient">
+  <section id="about" class="bg-primary-1 text-light py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6 order-1">
 
-          <h3 class="text-green">How It Works</h3>
+          <h3 class="text-light">How It Works</h3>
           <p>Share with us your dietary goals, requirements, preferences and anything else we need to know to cater to
             your needs so that you can meet your goals.</p>
           <div class="d-flex">
@@ -212,7 +190,7 @@
         <div class="col text-center text-dark py-5">
           <h1 class="display4">SERVICE AREA</h1>
           <p class="lead">YOU DECIDE WHAT BEST WORKS FOR YOU WE WILL DELIVER</p>
-          <a href="#service-area" class="btn btn-outline-light">Find out more</a>
+          <a href="#service-area" class="btn btn-outline-dark">Find out more</a>
         </div>
       </div>
     </div>
@@ -255,7 +233,7 @@
   </section>
 
   <!--BLOG HEAD -->
-  <section id="explore-head-section">
+  <section id="explore-head-section" class="bg-purple-gradient">
     <div class="container">
       <div class="row">
         <div class="col text-center text-dark py-5">
@@ -266,10 +244,10 @@
   </section>
 
   <!--BLOG SECTION -->
-  <section id="explore-section" class="bg-light text-dark py-5">
+  <section id="explore-section" class="bg-primary-2 text-ligh py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 order-1">
           <div class="d-flex">
             <div class="p-4 align-self-start">
               <i class="fas fa-check fa-2x"></i>
@@ -288,10 +266,13 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="https://images.unsplash.com/photo-1494315153767-9c231f2dfe79?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="" class="img-fluid mb-3 rounded-circle">
+          <img src="https://images.unsplash.com/photo-1543352634-a1c51d9f1fa7?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OHx8aGVhbHRoeSUyMG1lYWx8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
       </div>
+   </div>
   </section>
-
+  <div class="col text-center py-5 primary-color" >
+    <button class=" bg-primary-1 p-4 text-light" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
+  </div>
   <!-- FOOTER -->
   <footer id="main-footer" class="bg-gradient">
     <div class="container">
@@ -307,7 +288,7 @@
   </footer>
 
   <!-- CONTACT MODAL -->
-  <div class="modal fade text-dark"  id="contact_modal">
+  <div class="modal fade text-light"  id="contact_modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header bg-green">
@@ -339,8 +320,8 @@
           </div>
         </div>
         <div class="modal-footer bg-green">
-          <button type="button" class="btn btn-success">Save changes</button>
-          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn">Save changes</button>
+          <button type="button" class="btn btn" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
