--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -76,19 +76,19 @@
     </div>
 </section>
 <div class="row text-dark py-5" id="danu">
-  <div class="col-md-4 bg-light-yellow p-5">
+  <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <h1>Gary Lacinski
       Publisher</h1>
     <p></p>
   </div>
-  <div class="col-md-4 bg-light-red p-5">
+  <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <h1>Gary Lacinski
       Publisher</h1>
     <p></p>
   </div>
-  <div class="col-md-4 bg-light-blue p-5">
+  <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <h1>Gary Lacinski
       Publisher</h1>
