--- a/blog-detail.html
+++ b/blog-detail.html
@@ -79,11 +79,11 @@
       <div class="col-md-4 pl-5">
         <h2>Recent Posts</h2>
         <ul class="list-group">
-          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-warning text-white">What is Intermittent fasting?</a>
-          <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-success text-white"> Mediterranean Diet</a>
-          <a href="brain-health.html" class="nav-link list-group-item bg-primary text-white">Foods that are Great for your Brain Health</a>
-          <a href="inflammation.html" class="nav-link list-group-item bg-success text-white">Foods That Help Inflammation in the Body</a>
-          <a href="season-spring.html" class="nav-link list-group-item bg-danger text-white">Produce in-Season Spring 2021!</a>
+          <a href="intermittent-fasting.html" class="nav-link list-group-item bg-primary-1 text-white">What is Intermittent fasting?</a>
+          <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-primary-1 text-white"> Mediterranean Diet</a>
+          <a href="brain-health.html" class="nav-link list-group-item bg-primary-1 text-white">Foods that are Great for your Brain Health</a>
+          <a href="inflammation.html" class="nav-link list-group-item bg-primary-1 text-white">Foods That Help Inflammation in the Body</a>
+          <a href="season-spring.html" class="nav-link list-group-item bg-primary-1 text-white">Produce in-Season Spring 2021!</a>
         </ul>
 
       </div>
@@ -92,7 +92,7 @@
   </div>
 
   <!-- FOOTER -->
-  <footer id="main-footer" class="bg-green">
+  <footer id="main-footer" class="bg-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
@@ -107,7 +107,7 @@
 
  
   <!-- CONTACT MODAL -->
-  <div class="modal fade text-dark"  id="contact_modal">
+  <div class="modal fade text-light"  id="contact_modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header bg-green">
@@ -139,8 +139,8 @@
           </div>
         </div>
         <div class="modal-footer bg-green">
-          <button type="button" class="btn btn-success">Save changes</button>
-          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+          <button type="button" class="btn ">Save changes</button>
+          <button type="button" class="btn" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
