--- a/howit_works.html
+++ b/howit_works.html
@@ -123,7 +123,7 @@
 
 
   <!-- FOOTER -->
-  <footer id="why_zhiyu.html" class="bg-green">
+  <footer id="why_zhiyu.html" class="bg-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
@@ -131,7 +131,7 @@
 
           <h3>HEALTH CARE</h3>
           <P>Copyright &copy; <span id="year"></span></P>
-          <button class="btn btn-primary" data-toggle="modal" data-target="#contact_modal">Contact us</button>
+          <button class="btn btn" data-toggle="modal" data-target="#contact_modal">Contact us</button>
         </div>
         <div class="col-md-4"></div>
 
