--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
   </section>
 
   <!--HOW IT WORKS HEAD -->
-  <section id="about" class="text-dark">
+  <section id="about" class="text-light">
     <div class="container">
       <div class="row">
-        <div class="col text-center text-dark py-5 ">
+        <div class="col text-center text- py-5 primary-color ">
           <h1 class="display4">How It Works</h1>
           <p class="lead">Share with us your dietary goals, requirements, preferences and anything else we need to know to cater to your needs so that you can meet your goals.</p>
-          <a href="#" class="btn btn-outline-dark">Find out more</a>
+          <a href="howit_works.html" class="btn bg-primary-color text-light">Find out more</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@
         <div class="col text-center text-dark py-5">
           <h1 class="display4">SERVICE AREA</h1>
           <p class="lead">YOU DECIDE WHAT BEST WORKS FOR YOU WE WILL DELIVER</p>
-          <a href="#service-area" class="btn btn-outline-dark">Find out more</a>
+          <a href="service_area.html" class="btn bg-primary-color text-light">Find out more</a>
         </div>
       </div>
     </div>
@@ -233,11 +233,13 @@
   </section>
 
   <!--BLOG HEAD -->
-  <section id="explore-head-section" class="bg-purple-gradient">
+  <section id="explore-head-section" class="bg-">
     <div class="container">
       <div class="row">
         <div class="col text-center text-dark py-5">
           <h1 class="display4">Blog </h1>
+          <p class="lead">your guide to a healthy life style</p>
+          <a href="blog-detail.html" class="btn bg-primary-color text-light"> Find out more</a>
         </div>
       </div>
     </div>
