--- a/inflammation.html
+++ b/inflammation.html
@@ -79,20 +79,10 @@
       </div>
     </div>
   </div>
-  <div class="col-md-4 pl-5">
-    <h2>Recent Posts</h2>
-    <ul class="list-group">
-      <a href="intermittent-fasting.html" class="nav-link list-group-item bg-success text-white">What is Intermittent fasting?</a>
-      <a href="med'iterranean-diet.html" class="nav-link list-group-item bg-success text-white"> Mediterranean Diet</a>
-      <a href="brain-health.html" class="nav-link list-group-item bg-success text-white">Foods that are Great for your Brain Health</a>
-      <a href="inflammation.html" class="nav-link list-group-item bg-success text-white">Foods That Help Inflammation in the Body</a>
-      <a href="season-spring.html" class="nav-link list-group-item bg-success text-white">Produce in-Season Spring 2021!</a>
-    </ul>
-
-  </div>
+ </div>
 
     <!-- FOOTER -->
-    <footer id="main-footer" class="bg-green">
+    <footer id="main-footer" class="bg-gradient">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
