--- a/service_area.html
+++ b/service_area.html
@@ -117,7 +117,7 @@
       
 
   <!-- FOOTER -->
-  <footer id="main-footer" class="bg-green">
+  <footer id="main-footer" class="bg-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
@@ -125,7 +125,7 @@
 
           <h3>HEALTH CARE</h3>
           <P>Copyright &copy; <span id="year"></span></P>
-          <button class="btn btn-primary" data-toggle="modal" data-target="#contact modal">Contact us</button>
+          <button class="btn " data-toggle="modal" data-target="#contact modal">Contact us</button>
         </div>
         <div class="col-md-4"></div>
 
@@ -134,12 +134,12 @@
   </footer>
 
   <!-- CONTACT MODAL -->
-  <div class="modal fade text-dark" id="ContactModal">
+  <div class="modal fade text-dark" id="contact modal">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <div class="modal-title">Contact us</h5>
-            <button class="close" data-dismiss="modal">
+            <button class="close" data-dismiss="modal-body">
               <span>&times;</span>
             </button>
           </div>
