--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -78,26 +78,23 @@
 <div class="row text-dark py-5" id="danu">
   <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
-    <h1>Gary Lacinski
-      Publisher</h1>
+    <h1>Gary </h1>
     <p></p>
   </div>
   <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
-    <h1>Gary Lacinski
-      Publisher</h1>
+    <h1>Gary </h1>
     <p></p>
   </div>
   <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
-    <h1>Gary Lacinski
-      Publisher</h1>
+    <h1>Gary</h1>
     <p></p>
   </div>
 </div>
 
   <!-- FOOTER -->
-  <footer id="why_zhiyu.html" class="bg-green">
+  <footer id="why_zhiyu.html" class="bg-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
@@ -105,7 +102,7 @@
 
           <h3>HEALTH CARE</h3>
           <P>Copyright &copy; <span id="year"></span></P>
-          <button class="btn btn-primary" data-toggle="modal" data-target="#contact_modal">Contact us</button>
+          <button class="btn btn" data-toggle="modal" data-target="#contact_modal">Contact us</button>
         </div>
         <div class="col-md-4"></div>
 
@@ -114,7 +111,7 @@
   </footer>
 
   <!-- CONTACT MODAL -->
- <div class="modal fade text-dark"  id="contact_modal">
+ <div class="modal fade text-light"  id="contact_modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header bg-green">
@@ -146,8 +143,8 @@
           </div>
         </div>
         <div class="modal-footer bg-green">
-          <button type="button" class="btn btn-success">Save changes</button>
-          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn">Save changes</button>
+          <button type="button" class="btn btn" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
