--- a/Blog.html
+++ b/Blog.html
@@ -102,7 +102,7 @@
     </div>
     </div>
     <!-- FOOTER -->
-  <footer id="main-footer" class="bg-green">
+  <footer id="main-footer" class="bg-gradient">
     <div class="container">
       <div class="row">
         <div class="col-md-4"></div>
