--- a/brain-health.html
+++ b/brain-health.html
@@ -76,7 +76,7 @@
     </div>            
   </div>
     <!-- FOOTER -->
-    <footer id="main-footer" class="bg-green">
+    <footer id="main-footer" class="bg-gradient">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
