--- a/intermittent-fasting.html
+++ b/intermittent-fasting.html
@@ -91,15 +91,12 @@
                 alt="How to Select, Store and Use Sweet Potatoes"> 
          </div>
       </div>
-      <a href="#" class="btn btn-primary disabled" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
-      <a href="#" class="btn btn-secondary disabled" tabindex="-1" role="button" aria-disabled="true">Link</a>
-
-   </div>
+    </div>
 </div>
 
 
     <!-- FOOTER -->
-    <footer id="main-footer" class="bg-green">
+    <footer id="main-footer" class="bg-gradient">
         <div class="container">
             <div class="row">
                 <div class="col-md-4"></div>
