--- a/howit_works.html
+++ b/howit_works.html
@@ -100,18 +100,18 @@
         </div>
     </div>
 </section>
-<div class="row text-dark py-5 px-5" id="danu">
-  <div class="col-md-4 bg-purple-gradient text-dark align-center p-5 shadow p-3 mb-5 bg-body rounded">
+<div class="row text-light py- px-" >
+  <div class="col-md-4 bg-purple-gradient text align-center p-5 shadow p-3 mb-5 bg-body rounded" id="danu">
     <img src="assets/img/house.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <p></p>
   </div>
-  <div class="col-md-4 bg-purple-gradient p-5 shadow p-3 mb-5 bg-body rounded">
+  <div class="col-md-4 bg-purple-gradient p-5 shadow p-3 mb-5 bg-body rounded text-light " id="danu">
     <img src="assets/img/stethoscope.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <p></p>
   </div>
-  <div class="col-md-4 bg-purple-gradient p-5 shadow p-3 mb-5 bg-body rounded">
+  <div class="col-md-4 bg-purple-gradient p-5 shadow p-3 mb-5 bg-body rounded text-light" id="danu">
     <img src="assets/img/plan.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
     <p></p>
@@ -140,7 +140,7 @@
   </footer>
 
   <!-- CONTACT MODAL -->
-  <div class="modal fade text-dark"  id="contact_modal">
+  <div class="modal fade text-light"  id="contact_modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header bg-green">
@@ -172,8 +172,8 @@
           </div>
         </div>
         <div class="modal-footer bg-green">
-          <button type="button" class="btn btn-success">Save changes</button>
-          <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+          <button type="button" class="btn">Save changes</button>
+          <button type="button" class="btn " data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
