--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -75,20 +75,20 @@
         </div>
     </div>
 </section>
-<div class="row text-dark py-5" id="danu">
+<div class="row text-light py-5" id="danu">
   <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
-    <h1>Gary </h1>
+    <h1></h1>
     <p></p>
   </div>
   <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
-    <h1>Gary </h1>
+    <h1></h1>
     <p></p>
   </div>
   <div class="col-md-4 bg-purple-gradient p-5">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
-    <h1>Gary</h1>
+    <h1></h1>
     <p></p>
   </div>
 </div>
@@ -111,7 +111,7 @@
   </footer>
 
   <!-- CONTACT MODAL -->
- <div class="modal fade text-light"  id="contact_modal">
+ <div class="modal fade text-light"id="contact_modal">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header bg-green">
