--- a/faq.html
+++ b/faq.html
@@ -45,6 +45,33 @@
             </button>
         </div>
     </nav>
+    <div class="accordion" id="danu">
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="danu">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              Accordion Item #1
+            </button>
+          </h2>
+          <div id="danu" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="headingTwo">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              Accordion Item #2
+            </button>
+          </h2>
+          <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+            </div>
+          </div>
+        </div>
+      </div>
+
     <!-- Frequently Asked Questions -->
     <section class="text-dark container" id="about">
         <h1 class="text-center text-dark">Frequently asked questions</h1>
@@ -99,7 +126,7 @@
     </section>
     <div class="text-dark text-center" id="MAM">
         <h2 class="p-5">I AM READY TO TRY ZHI YU</h2>
-          <button class=" btn btn-success p-4" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
+          <button class=" btn bg-primary-1 p-4 text-light" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
           <div class="call info p-5">YOU CAN ALSO CALL:12345678 </div>
         </div>
     
