--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
           <img src="assets/img/HM.jpg" alt="" class="img-fluid mb-3 rounded-circle">
         </div>
       </div>
+    </div>
   </section>
 
   <!--BLOG HEAD -->
