--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@
           <img src="assets/img/HM.jpg" alt="" class="img-fluid mb-3 rounded-circle">
         </div>
       </div>
-    <
   </section>
 
   <!--BLOG HEAD -->
@@ -274,7 +273,8 @@
    </div>
   </section>
   <div class="col text-center py-5 primary-color" >
-    <button class=" bg-primary-1 p-4 text-light" data-toggle="modal" data-target="#contact"><h1>LET'S GET STARTED</h1></button>
+    <button class=" bg-primary-1 p-4 text-light" data-toggle="modal" data-target="#contact"><a href="Blog.html"class="text-light" id="danu">LET'S GET STARTED</a></button>
+    
   </div>
   <!-- FOOTER -->
   <footer id="main-footer" class="bg-gradient">
