--- a/howit_works.html
+++ b/howit_works.html
@@ -100,7 +100,7 @@
         </div>
     </div>
 </section>
-<div class="row text-light py- px-" >
+<div class="row text-lightt" >
   <div class="col-md-4 bg-purple-gradient text align-center p-5 shadow p-3 mb-5 bg-body rounded" id="danu">
     <img src="assets/img/house.png" class="w-50 pb-5" alt="Healthy Meal">
     <p> thank zhi yu everyday because it reminds me of what a “portion” should be and what a “balanced Meal” is!…..not to mention what “delicious ” can taste like!</p>
