--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <section id="share-head-section" class="">
     <div class="container">
       <div class="row">
-        <div class="col text-center py-5 primary-color" >
+        <div class="col text-center py-5 primary-color">
           <h1 class="display4">Why Zhi yu</h1>
           <p class="lead">Whether you are a busy mom, or an executive who works late, everyone has their own personal fitness goals and dietary nee</p>
           <a href="why_zhiyu.html" class="btn bg-primary-color text-light">Find out more</a>
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="https://images.unsplash.com/photo-1467453678174-768ec283a940?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="" class="img-fluid mb-3 rounded-circle">
+          <img src="https://images.unsplash.com/photo-1467453678174-768ec283a940?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTR8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="healthy meal" class="img-fluid mb-3 rounded-circle">
 
         </div>
       </div>
@@ -203,7 +203,7 @@
         <div class="col-md-6">
 
           <h3>SERVICE AREA</h3>
-          <p>Zhi yu services the New York metropolitan area. We deliver your meals daily overnight by 6am to your home
+          <p> We deliver your meals daily overnight by 6am to your home
             or your office; whichever is most convenient for you. At the end of your day simply leave the insulated tote
             at your drop off location and we’ll replace it with your new delivery every day.</p>
           <div class="d-flex">
@@ -212,7 +212,7 @@
             </div>
             <div class="p-4 align-self-end">
               We deliver to Guanzhu. Nanchang, Shanghia,Hong kong and , Westchester
-              County, Greenwich CT and parts of New Jersey as well.
+              County, Greenwich CT.
             </div>
           </div>
           <div class="d-flex">
@@ -318,7 +318,7 @@
           </button>
         </div>
         <div class="modal-body bg-green">
-          <div class="row">
+          <div class="row"> 
             <div class="col-md-6">
               <div class="form-group">
                 <label for="name">Name</label>
