--- a/med'iterranean-diet.html
+++ b/med'iterranean-diet.html
@@ -79,8 +79,8 @@
           </div>
           <div class="col-md-6">
             <img
-              src="https://images.unsplash.com/photo-1554998171-89445e31c52b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-              class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="How to Select, Store and Use Sweet Potatoes">
+              src="https://images.unsplash.com/photo-1482049016688-2d3e1b311543?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=410&q=80"
+              class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5" alt="Healthy meal">
           </div>
         </div>
 
@@ -91,7 +91,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <img
-                    src="https://images.unsplash.com/photo-1554998171-89445e31c52b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGhlYWx0aHklMjBtZWFsfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                    src="https://images.unsplash.com/photo-1493770348161-369560ae357d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                     class=" img-fluid mb-3 rounded-circle shadow p-3 mb-5"
                     alt="How to Select, Store and Use Sweet Potatoes">
                 </div>
