--- a/why_zhiyu.html
+++ b/why_zhiyu.html
@@ -28,7 +28,7 @@
                         <a href="why_zhiyu.html" class="nav-link">Why Zhi Yu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Howit_works.html" class="nav-link">How it works</a>
+                        <a href="howit_works.html" class="nav-link">How it works</a>
                     </li>
                     <li class="nav-item">
                         <a href="service_area.html" class="nav-link">Service area</a>
